# c-structures

./: .gitignore  CMakeLists.txt  README.md
algorithms/bsearch/: CMakeLists.txt
algorithms/bsearch/include/: bsearch.h  vector.h
algorithms/bsearch/lib/: libvector.so.1
algorithms/bsearch/src/: bsearch.c
algorithms/bsearch/tests/: tests_bsearch.c
include/: vector.h
src/: vector.c
structures/bit-vector/: README.md
structures/bit-vector/include/: bitVector.h
structures/bit-vector/src/: bitVector.c
structures/listDouble/: README.md
structures/listDouble/include/: list_double.h
structures/listDouble/src/: ListDouble.c
structures/list_node/: README.md
structures/list_node/include/: ListNode.h
structures/list_node/src/: list_node.c
structures/my_string/: README.md
structures/my_string/include/: my_string.h
structures/my_string/src/: my_string.c
structures/string_libmy/: README.md
tests/: vector_tests.c
tests/tests_ListDouble/: tests_ListDouble.c
tests/tests_bitVector/: tests_bitVector.c
tests/tests_recursion/: test_recursion.c
tests/tests_single-linked/: tests_single-linked.c
tests/tests_string/: tests_string.c
tests/tests_vector/: tests_vector.c
